cursor no longer renders on mobile devices

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -412,6 +412,7 @@ a {
 
 .about--image:hover>.img {
   filter: none;
+  border-radius: 20px;
 }
 
 .img {
